--- a/templates/index.html
+++ b/templates/index.html
@@ -10,45 +10,58 @@
         {% include 'header.html' %}
 
         <div class="categories-section">
+            <div class="section-container">
 
-            <h2 class="categories-header">Event Categories</h2>
+                <h2 class="categories-header">Event Categories</h2>
 
-            <div class="col-1 flex-row category-row">
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm iOS</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
+                <div class="col-1 flex-row category-row">
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_ios.png') }}" alt="iOS Persona" />
+                        </div>
+                        <h4>Hi! I'm iOS</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_vr.png') }}" alt="VR Persona" />
+                        </div>
+                        <h4>Hi! I'm VR</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_game.png') }}" alt="Game Developer Persona" />
+                        </div>
+                        <h4>Hi! I'm Game Dev</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
                 </div>
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm VR</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
-                </div>
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm Game Dev</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
+
+                <div class="col-1 flex-row category-row">
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_game.png') }}" alt="iOS Event Category" />
+                        </div>
+                        <h4>Hi! I'm Android</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_ios.png') }}" alt="iOS Event Category" />
+                        </div>
+                        <h4>Hi! I'm Web Dev</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
+                    <div class="col-3 category-item">
+                        <div class="centered-image-container">
+                            <img src="{{ static('assets/persona_vr.png') }}" alt="iOS Event Category" />
+                        </div>
+                        <h4>Hi! I'm Hardware</h4>
+                        <p>Cutting edge phone apps are my thing.</p>
+                    </div>
                 </div>
             </div>
-
-            <div class="col-1 flex-row category-row">
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm Android</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
-                </div>
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm Web Dev</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
-                </div>
-                <div class="col-3 category-item">
-                    <img src="{{ static('assets/GM_logo.png') }}" alt="iOS Event Category" />
-                    <h4>Hi! I'm Hardware</h4>
-                    <p>Cutting edge phone apps are my thing.</p>
-                </div>
-            </div>
-
         </div>
 
         <div class="more-info">
