--- a/static/stylesheets/index.css
+++ b/static/stylesheets/index.css
@@ -14,20 +14,18 @@ h3 {
     }
 }
 
-@media only screen and (max-width: 720px) {
-    .grid-item .grid-item-content .basic-info {
-        text-align: center;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+.centered-image-container {
+    margin: 0 auto;
+    width: 210px;
+    height: 210px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    .grid-item .grid-item-content .basic-info h1 {
-        font-size: 24pt;
-        transition: all 0.2s;
-    }
+.centered-image-container img {
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .categories-section {
@@ -35,24 +33,53 @@ h3 {
 }
 
 .categories-header {
-    color: black;
+    text-transform: uppercase;
     text-align: center;
-    padding: 40px 0;
+    padding: 100px 0;
     font-weight: 300;
-    font-size: 32px;
+    font-size: 26px;
+}
+
+.category-row:last-child {
+    padding: 100px 0;
 }
 
 .category-item {
-    color: black;
     text-align: center;
 }
 
-.category-item img {
-    max-width: 210px;
-    max-height: 210px;
+.category-item h4 {
+    margin-top: 60px;
 }
 
-.category-item h4 {
-    margin-top: 30px;
+.category-item p {
+    font-size: 20px;
+    max-width: 60%;
+}
+
+@media only screen and (max-width: 720px) {
+    .categories-header {
+        padding-bottom: 40px;
+    }
+    .category-row:last-child {
+        padding-top: 0;
+        padding-bottom: 40px;
+    }
+
+    .category-item h4 {
+        margin-top: 30px;
+    }
+
+    .category-item p {
+        margin-bottom: 40px;
+    }
+
+    .centered-image-container {
+        width: auto;
+        height: auto;
+        max-width: 210px;
+        max-height: 210px;
+        display: inline-block;
+    }
 }
 
