--- a/templates/header.html
+++ b/templates/header.html
@@ -1,69 +1,69 @@
 <div style="padding-top: 120px"></div>
-<div class="header turquoise">
+<div class="header">
     <div id="eventInfo">
         <h2>March 24-26</h2>
     </div>
     <div id="logo">
         <a href="{{ url_for('mhacks-home') }}">
-            <img id="logoM" src="{{ static('assets/logo-m.png') }}" alt="MHacks 8 Logo - M">
-            <img id="logoText" src="{{ static('assets/logo-text.png') }}" alt="MHacks 8 Logo - Hacks 8">
+            <img id="logo-text" src="{{ static('assets/logo-text.png') }}" alt="MHacks 9 Logo">
         </a>
     </div>
     <div id="headerButtons">
-        {% if 'live/' not in request.path %}
-            <form method="GET" action="{{ url_for('mhacks-live') }}">
-                <button type="submit">Live</button>
-            </form>
-        {% endif %}
-        {% if 'dashboard/' not in request.path %}
-            <form method="GET" action="{{ url_for('mhacks-dashboard') }}">
-                <button type="submit" style="width: 110px;">Dashboard</button>
-            </form>
-        {% endif %}
-{#        {% if 'apply/' not in request.path %}#}
-{#            <form method="GET" action="{{ url_for('mhacks-apply') }}">#}
-{#                <button type="submit">Apply</button>#}
+{#        {% if 'live/' not in request.path %}#}
+{#            <form method="GET" action="{{ url_for('mhacks-live') }}">#}
+{#                <button type="submit">Live</button>#}
 {#            </form>#}
 {#        {% endif %}#}
-{##}
-{#        <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">#}
-{#            <button type="submit">Mentor</button>#}
-{#        </form>#}
+{#        {% if 'dashboard/' not in request.path %}#}
+{#            <form method="GET" action="{{ url_for('mhacks-dashboard') }}">#}
+{#                <button type="submit" style="width: 110px;">Dashboard</button>#}
+{#            </form>#}
+{#        {% endif %}#}
 
-        {% if request.user.is_authenticated() %}
-            <form method="POST" action="{{ url_for('mhacks-logout') }}">
-                {{ csrf_input }}
-                <button type="submit">Logout</button>
-            </form>
-        {% else %}
-            <form method="GET" action="{{ url_for('mhacks-login') }}">
-                <button type="submit">Login</button>
+        <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">
+            <button type="submit">Mentor</button>
+        </form>
+        {% if 'apply/' not in request.path %}
+            <form method="GET" action="{{ url_for('mhacks-apply') }}">
+                <button type="submit">Apply</button>
             </form>
         {% endif %}
+
+{#        {% if request.user.is_authenticated() %}#}
+{#            <form method="POST" action="{{ url_for('mhacks-logout') }}">#}
+{#                {{ csrf_input }}#}
+{#                <button type="submit">Logout</button>#}
+{#            </form>#}
+{#        {% else %}#}
+{#            <form method="GET" action="{{ url_for('mhacks-login') }}">#}
+{#                <button type="submit">Login</button>#}
+{#            </form>#}
+{#        {% endif %}#}
     </div>
     <div id="headerDropdown">
         <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
         <div id="dropdownContent" class="turquoise">
+
+            <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">
+                <button type="submit">Mentor</button>
+            </form>
+
             {% if 'apply/' not in request.path %}
                 <form method="GET" action="{{ url_for('mhacks-apply') }}">
                     <button type="submit">Apply</button>
                 </form>
             {% endif %}
 
-            <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">
-                <button type="submit">Mentor</button>
-            </form>
-
-            {% if request.user.is_authenticated() %}
-                <form method="POST" action="{{ url_for('mhacks-logout') }}">
-                    {{ csrf_input }}
-                    <button type="submit">Logout</button>
-                </form>
-            {% else %}
-                <form method="GET" action="{{ url_for('mhacks-login') }}">
-                    <button type="submit">Login</button>
-                </form>
-            {% endif %}
+{#            {% if request.user.is_authenticated() %}#}
+{#                <form method="POST" action="{{ url_for('mhacks-logout') }}">#}
+{#                    {{ csrf_input }}#}
+{#                    <button type="submit">Logout</button>#}
+{#                </form>#}
+{#            {% else %}#}
+{#                <form method="GET" action="{{ url_for('mhacks-login') }}">#}
+{#                    <button type="submit">Login</button>#}
+{#                </form>#}
+{#            {% endif %}#}
         </div>
     </div>
 </div>
