--- a/templates/application.html
+++ b/templates/application.html
@@ -72,4 +72,4 @@
 
 {% block form_enctype %}enctype="multipart/form-data"{% endblock %}
 
-{% block form_title %}Apply{% endblock %}
+{% block form_title %}Hacker Application{% endblock %}
