--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
     </div>
     <div id="logo">
         <a href="{{ url_for('mhacks-home') }}">
-            <img id="logo-text" src="{{ static('assets/logo-text.png') }}" alt="MHacks 9 Logo">
+            <img id="logo-text" class="logo-scale" src="{{ static('assets/logo-text.png') }}" alt="MHacks 9 Logo">
         </a>
     </div>
     <div id="headerButtons">
