--- a/static/stylesheets/form.css
+++ b/static/stylesheets/form.css
@@ -44,7 +44,7 @@ p {
 
 .title-form h3 {
     font-weight: bolder;
-    color: #4a90c1;
+    color: white;
     font-size: 20px;
     margin: 0;
     padding: 15px 0;
@@ -155,8 +155,7 @@ html input:focus {
 
 html input[type="radio"],
 html button {
-    background: rgba(0, 169, 194, 1);
-    box-shadow: 0 3px 6px rgba(0,0,0,0.23), 0 3px 6px rgba(0,0,0,0.15);
+    background: #33c5f4;
     border-radius: 5px;
     -webkit-transition: .4s;
     transition: .4s;
