--- a/templates/header.html
+++ b/templates/header.html
@@ -2,6 +2,7 @@
 <div class="header">
     <div id="eventInfo">
         <h2>March 24-26</h2>
+        <p>University of Michigan</p>
     </div>
     <div id="logo">
         <a href="{{ url_for('mhacks-home') }}">
@@ -14,31 +15,32 @@
 {#                <button type="submit">Live</button>#}
 {#            </form>#}
 {#        {% endif %}#}
-{#        {% if 'dashboard/' not in request.path %}#}
-{#            <form method="GET" action="{{ url_for('mhacks-dashboard') }}">#}
-{#                <button type="submit" style="width: 110px;">Dashboard</button>#}
-{#            </form>#}
-{#        {% endif %}#}
 
-        <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">
-            <button type="submit">Mentor</button>
-        </form>
-        {% if 'apply/' not in request.path %}
-            <form method="GET" action="{{ url_for('mhacks-apply') }}">
-                <button type="submit">Apply</button>
+        {% if request.user.is_authenticated() and 'dashboard/' not in request.path %}
+            <form method="GET" action="{{ url_for('mhacks-dashboard') }}">
+                <button type="submit" style="width: 110px;">Dashboard</button>
             </form>
         {% endif %}
 
-{#        {% if request.user.is_authenticated() %}#}
-{#            <form method="POST" action="{{ url_for('mhacks-logout') }}">#}
-{#                {{ csrf_input }}#}
-{#                <button type="submit">Logout</button>#}
-{#            </form>#}
-{#        {% else %}#}
-{#            <form method="GET" action="{{ url_for('mhacks-login') }}">#}
-{#                <button type="submit">Login</button>#}
+{#        <form method="GET" action="{{ url_for('mhacks-applyMentor') }}">#}
+{#            <button type="submit">Mentor</button>#}
+{#        </form>#}
+{#        {% if 'apply/' not in request.path %}#}
+{#            <form method="GET" action="{{ url_for('mhacks-apply') }}">#}
+{#                <button type="submit">Apply</button>#}
 {#            </form>#}
 {#        {% endif %}#}
+
+        {% if request.user.is_authenticated() %}
+            <form method="POST" action="{{ url_for('mhacks-logout') }}">
+                {{ csrf_input }}
+                <button type="submit">Logout</button>
+            </form>
+        {% else %}
+            <form method="GET" action="{{ url_for('mhacks-login') }}">
+                <button type="submit">Login</button>
+            </form>
+        {% endif %}
     </div>
     <div id="headerDropdown">
         <i id="dropdownTrigger" class="fa fa-bars fa-2x" aria-hidden="false"></i>
