--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <canvas id="bgCanvas"></canvas>
     <div id="container">
         {% include 'header.html' %}
-
+        {% include 'dynamic_people.html' %}
         <div class="categories-section">
             <div class="section-container">
 
