--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -332,70 +332,77 @@ a {
     display: flex;
     position: relative;
     width: 80%;
-    left: 12%;
     align-items: flex-end;
+    justify-content: center
 }
+
+// .person {
+//     margin-left: 70%;
+//     margin-right: 70%;
+// }
 
 #p1 {
     width: 10%;
+    position: relative;
+    left: 21.8%;
 }
 
 #p2 {
     width: 13.8%;
     position: relative;
-    left: -1%;
+    left: 20%;
 }
 
 #p3 {
     width: 12.9%;
     position: relative;
-    left: -4%;
+    left: 17%;
     z-index: 2;
 }
 
 #p4 {
     width: 11%;
     position: relative;
-    left: -5.5%;
+    left: 15.5%;
 }
 
 #p5 {
     width: 10%;
     position: relative;
-    left: -8%;
+    left: 13%;
     z-index: 2;
 }
 
 #p6 {
     width: 13%;
     position: relative;
-    left: -9.2%;
+    left: 11.8%;
 }
 
 #p7 {
     width: 11.17%;
     position: relative;
-    left: -11.5%;
+    left: 9.5%;
     z-index: 2;
 }
 
 #p8 {
     width: 14%;
     position: relative;
-    left: -15%;
+    left: 6%;
 }
 
 #p9 {
     width: 10%;
     position: relative;
-    left: -17.2%;
+    left: 4.2%;
     z-index: 2;
 }
 
 #p10 {
     width: 9%;
     position: relative;
-    left: -19%;
+    left: 2%;
 }
 
 
