--- a/templates/dynamic_people.html
+++ b/templates/dynamic_people.html
@@ -1,3 +1,11 @@
+<div id="bubble">
+	<div id="bubble-circle">
+		<div id="bubble-triangle"></div>
+			<div id="bubble-text">
+				Empathy-Driven <br/>Design
+			</div>
+	</div>
+</div>
 <div class="dynamic-people">
 	<img id="p1" class="person" src="{{ static('assets/characterSet/3-01-copy.png') }}" alt="person1">
 	<img id="p2" class="person" src="{{ static('assets/characterSet/3-02-copy.png') }}" alt="person2">
