fixed awkward spacing between main header and page headers (for non-home pages)

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<div style="padding-top: 120px"></div>
+<div id="header-pad"></div>
 <div class="header">
     <div id="eventInfo">
         <h2>March 24-26</h2>
