--- a/templates/dynamic_people.html
+++ b/templates/dynamic_people.html
@@ -1,21 +1,23 @@
-<div id="bubble">
-	<div id="bubble-circle">
-		<div id="bubble-triangle"></div>
-			<div id="bubble-text">
-				Empathy-Driven <br/>Design
-			</div>
+<div id="people-container">
+	<div id="bubble">
+		<div id="bubble-circle">
+			<div id="bubble-triangle"></div>
+				<div id="bubble-text">
+					Empathy-Driven <br/>Design
+				</div>
+		</div>
 	</div>
-</div>
-<div class="dynamic-people">
-	<img id="p1" class="person" src="{{ static('assets/characterSet/3-01-copy.png') }}" alt="person1">
-	<img id="p2" class="person" src="{{ static('assets/characterSet/3-02-copy.png') }}" alt="person2">
-	<img id="p3" class="person" src="{{ static('assets/characterSet/samChar-10.png') }}" alt="person3">
-	<img id="p4" class="person" src="{{ static('assets/characterSet/samChar-04.png') }}" alt="person4">
-	<img id="p5" class="person" src="{{ static('assets/characterSet/3-04-copy.png') }}" alt="person5">
-	<img id="p6" class="person" src="{{ static('assets/characterSet/samChar-12.png') }}" alt="person6">
-	<img id="p7" class="person" src="{{ static('assets/characterSet/3-05-copy.png') }}" alt="person7">
-	<img id="p8" class="person" src="{{ static('assets/characterSet/samChar-05.png') }}" alt="person8">
-	<img id="p9" class="person" src="{{ static('assets/characterSet/3-03-copy.png') }}" alt="person9">
-	<img id="p10" class="person" src="{{ static('assets/characterSet/samChar-06.png') }}" alt="person10">
+	<div class="dynamic-people">
+		<img id="p1" class="person" src="{{ static('assets/characterSet/3-01-copy.png') }}" alt="person1">
+		<img id="p2" class="person" src="{{ static('assets/characterSet/3-02-copy.png') }}" alt="person2">
+		<img id="p3" class="person" src="{{ static('assets/characterSet/samChar-10.png') }}" alt="person3">
+		<img id="p4" class="person" src="{{ static('assets/characterSet/samChar-04.png') }}" alt="person4">
+		<img id="p5" class="person" src="{{ static('assets/characterSet/3-04-copy.png') }}" alt="person5">
+		<img id="p6" class="person" src="{{ static('assets/characterSet/samChar-12.png') }}" alt="person6">
+		<img id="p7" class="person" src="{{ static('assets/characterSet/3-05-copy.png') }}" alt="person7">
+		<img id="p8" class="person" src="{{ static('assets/characterSet/samChar-05.png') }}" alt="person8">
+		<img id="p9" class="person" src="{{ static('assets/characterSet/3-03-copy.png') }}" alt="person9">
+		<img id="p10" class="person" src="{{ static('assets/characterSet/samChar-06.png') }}" alt="person10">
+	</div>
 </div>
 <script src="{{ static('javascript/dynamic_people.js') }}" type="text/javascript"></script>
