--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
                 <div class="big-tile">
 
                     <h4>General</h4>
-                    <div class="faq-row">
+                    <div class="faq-row yellow-text">
                         <div class="faq-item">
                             <div class="question" data-qid="1">
                                 What happens at a hackathon?
@@ -159,7 +159,7 @@
                     </div>
 
                     <h4>Application</h4>
-                    <div class="faq-row">
+                    <div class="faq-row mustard-text">
                         <div class="faq-item">
                             <div class="question" data-qid="6">
                                 When are applications closing?
@@ -242,7 +242,7 @@
                     </div>
 
                     <h4>Hacking</h4>
-                    <div class="faq-row">
+                    <div class="faq-row orange-text">
                         <div class="faq-item">
                             <div class="question" data-qid="14">
                                 What if I don’t have a team or idea?
@@ -265,7 +265,7 @@
                     </div>
 
                     <h4>Logistics</h4>
-                    <div class="faq-row">
+                    <div class="faq-row orange-red-text">
                         <div class="faq-item">
                             <div class="question" data-qid="17">
                                 How will I get there from other schools?
@@ -348,7 +348,7 @@
                     </div>
 
                     <h4>Help!</h4>
-                    <div class="faq-row">
+                    <div class="faq-row red-text">
                         <div class="faq-item">
                             <div class="question" data-qid="25">
                                 I don’t want to hack, I want to ________!
@@ -373,9 +373,9 @@
                 </div>
             </div>
 
-            <h1 class="grey-text">Sponsorship</h1>
+            <h2 class="section-header">Sponsorship</h2>
             <div class="flex-row">
-                <div class="col-2-bigL">
+                <div class="sponsorship-content">
                     <p>MHacks is the gateway between you and the top tech talent in the world. Whether you come to
                         network,
                         promote brand awareness, or get feedback on a product or API, we’ll provide the tools you need
@@ -383,28 +383,23 @@
                         the most out of your experience.</p>
                     <p>Interested in sponsoring? Want more information? Shoot us an email at
                         <a href="mailto:kevin@mhacks.org">kevin@mhacks.org</a>
-                        <br/><br/>We have an awesome lineup of sponsors for you below.<br/>Check back soon for even more company logos!
                     </p>
-                </div>
-                <div class="col-2-smallR" style="text-align: center">
-                    <img class="sponsors-image" src="{{ static('assets/sponsorIllustration-13.png') }}"
-                         alt="Sponsorship">
                 </div>
             </div>
 
 
             <div class="col-1 flex-row">
-                <div class="col-2 big-tile">
+                <div class="col-2 big-tile yellow-bg bubble">
                     <p class="quote">This was one of the most well organized student-run hackathons that we’ve ever
                         sponsored.</p>
                     <p class="source">Google</p>
                 </div>
-                <div class="col-2 big-tile">
+                <div class="col-2 big-tile orange-bg bubble">
                     <p class="quote">The caliber and number of students that MHacks attracts is like no other hacking
                         event.</p>
                     <p class="source">Walmart</p>
                 </div>
-                <div style="width: 100%" class="big-tile">
+                <div style="width: 100%" class="big-tile orange-red-bg bubble">
                     <p class="quote">MHacks has been a staple event in Concur’s University Tour over the past two years.
                         The MHacks atmosphere fosters creativity and innovation from developers and entrepreneurs alike.
                         When it comes to collegiate hackathons, MHacks is the place to be!</p>
